# partition-iterator

./: Cargo.toml  README.md
src/: lib.rs  partit.rs  seqit.rs
