[package]
description = "Iterator adaptors that enumerate all partitions or all k-partitions of an iterator's content."
name = "partition-iterator"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/microgravitas/partition-iterator"
readme = "README.md"

keywords = ["mathematics"]

[dependencies]
